# personal-memory

./: .gitignore  README.md  pyproject.toml  test_chunker.py
docs/: ARCHITECTURE.md
eval/: items.json  queries.json  run.py
mem/: __init__.py  chunker.py  cli.py  embedder.py  retriever.py  store.py
tests/: test_chunker.py  test_cli.py  test_dedup.py  test_embedder.py  test_eval.py  test_retriever.py  test_store.py
